--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,12 +2,12 @@
 //                Variables                  //
 ///////////////////////////////////////////////
 
-$primary: #6EC4DB;
+$primary: #501f3a;
 $secondary: #3197EE;
 $background: #E6ECF0;
 $bg-s: #f5f8fa;
 $purple: #db2abe;
-$green: #66AB86;
-$red: #FA7C92;
+$green: #14a098;
+$red: #CB2D6F;
 $blue: #6EC4DB;
 $grey: #f5f8fa;
