--- a/src/app/modules/shared/components/header/header.component.scss
+++ b/src/app/modules/shared/components/header/header.component.scss
@@ -1,18 +1,16 @@
-$primary: #6EC4DB;
-$secondary: #3197EE;
-$background: #E6ECF0;
+@import "~src/variables.scss";
 
 @media (min-width: 992px) {
   .header-wrapper {
-    height: 50px;
+    height: 40px;
     position: fixed;
-    //z-index: 800;
     width: 100%;
     background: $primary;
 
     p, span, i, fa, div, a {
       color: whitesmoke;
     }
+
     .navigation {
       display: inline-flex;
 
@@ -36,23 +34,16 @@ $background: #E6ECF0;
             position: relative;
 
             .title {
-              border-left: 2px solid #DADADA;
               display: inline-flex;
             }
           }
         }
-      }
-    }
 
+        .element:hover {
+          -webkit-transition: background 0.2s ease-in-out;
+          transition: background 0.2s ease-in-out;
+          background: #b0d7db;
 
-    .options {
-      float: right;
-      display: inline-flex;
-
-      .option {
-        fa {
-          align-self: center;
-          font-size: 20px;
         }
       }
     }
