--- a/src/app/modules/dashboard/components/card/card.component.html
+++ b/src/app/modules/dashboard/components/card/card.component.html
@@ -1,7 +1,4 @@
-<div class="dashboard-report-card"
-  [ngStyle]="{
-    'border-top': '5px solid' + config.title.color
-  }">
+<div class="dashboard-report-card">
 
   <div class="centered title padding-s">
 
