--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -24,7 +24,7 @@
         Log In
         <fa name="user" class="padding"></fa>
       </a>
-      <a *ngIf="loggedIn$ | async" class="padding element">
+      <a *ngIf="loggedIn$ | async" class="padding element left">
         Account Settings
         <fa name="cog" class="padding"></fa>
       </a>
