--- a/src/styles.scss
+++ b/src/styles.scss
@@ -124,10 +124,10 @@ li {
   color: $primary;
 }
 .color-red {
-  color: #FA7C92;
+  color: $red;
 }
 .color-green {
-  color: #66AB86;
+  color: $green;
 }
 .color-s {
   color: #66AB86;
