Green is primary

--- a/src/app/modules/shared/components/header/header.component.scss
+++ b/src/app/modules/shared/components/header/header.component.scss
@@ -5,9 +5,10 @@
     height: 40px;
     position: fixed;
     width: 100%;
+    background: $green;
 
     p, span, i, fa, div, a {
-      color: $primary;
+      color: $white;
     }
 
 
