--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,7 +2,8 @@
 //                Variables                  //
 ///////////////////////////////////////////////
 
-$primary: #501f3a;
+$primary: #14a098;
+//$primary: #501f3a;
 $secondary: #3197EE;
 $background: #E6ECF0;
 $bg-s: #f5f8fa;
@@ -11,3 +12,4 @@ $green: #14a098;
 $red: #CB2D6F;
 $blue: #OF292F;
 $grey: #f5f8fa;
+$white: #FFFFFF;
