--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,8 +3,10 @@
 ///////////////////////////////////////////////
 
 $primary: #14a098;
+$primary-light: #169aa0;
+$primary-dark: #0e8187;
 //$primary: #501f3a;
-$secondary: #3197EE;
+$secondary: #CB2D6F;
 $background: #E6ECF0;
 $bg-s: #f5f8fa;
 $purple: #db2abe;
