--- a/src/app/core/app.component.html
+++ b/src/app/core/app.component.html
@@ -1,6 +1,9 @@
-<div [@routeAnimation]="getAnimationData(routerOutlet)">
-  <router-outlet #routerOutlet="outlet"></router-outlet>
-</div>
-
-
+<!--<mat-sidenav-container class="example-container">-->
+  <!--<mat-sidenav mode="over">Sidenav content</mat-sidenav>-->
+  <!--<mat-sidenav-content>-->
+    <div [@routeAnimation]="getAnimationData(routerOutlet)">
+      <router-outlet #routerOutlet="outlet"></router-outlet>
+    </div>
+  <!--</mat-sidenav-content>-->
+<!--</mat-sidenav-container>-->
 
