--- a/src/app/modules/charts/components/piechart/piechart.component.html
+++ b/src/app/modules/charts/components/piechart/piechart.component.html
@@ -15,7 +15,7 @@
                [ngStyle]="{
         'background-color': pie.color,
         'color': invertColor(pie.color, true)
-       }">
+       }" (click)="toggleTag(pie.title)">
             <span>  {{ pie.title }}</span>
 
           </div>
