--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
 <div class="content" #content>
   <div class="margin-s container">
     <div fxLayout
-         fxLayout.xs="row"
+         fxLayout.xs="column"
          fxLayoutAlign="space-between"
          fxLayoutGap="8px"
          fxLayoutGap.xs="0">
@@ -39,7 +39,7 @@
           </div>
         </div>
       </div>
-      <div flex class="high">
+      <div flex class="transactions-block">
         <div class="relative">
           <div class="margin-bs">
             <div class="transaction-bar">
