--- a/src/variables.scss
+++ b/src/variables.scss
@@ -4,7 +4,7 @@
 
 $primary: #14a098;
 $primary-light: #169aa0;
-$primary-dark: #0e8187;
+$primary-dark: #0e8b91;
 //$primary: #501f3a;
 $secondary: #CB2D6F;
 $background: #E6ECF0;
