--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -1,19 +1,19 @@
-<div class="raised top-header">
+<div class="top-header">
   <app-header></app-header>
 </div>
 
-<div class="centered-h content">
-  <div class="segment centered">
+<div class="full-height content">
+  <div class="segment full-height centered">
     <div class="bg-white margin-s padding-s relative login chart">
       <div class="bordered-b shaded">
         <div class="centered login-header">
-          <h3>AccountPlus</h3>
+          <h3>iSave</h3>
         </div>
         <div class="centered padding login-title">
-          <p class="bold-800 color-p">Sign In</p>
+          <p class="bold-800 color-p">Welcome Back!</p>
         </div>
         <div class="centered login-intro">
-          <p>to your account</p>
+          <p>Don't miss your next opportunity. Sign in to stay keep track of your savings.</p>
         </div>
         <div class="errors">
           <div class="error">
@@ -27,7 +27,7 @@
 
       <div class="absolute-bottom padding-bs">
         <!--<a href="" class="info link ">Forgot Password?</a>-->
-        <a href="" class="info link float-right" routerLink="/auth/register">Create an account</a>
+        <a href="" class="info link float-right" routerLink="/account/register">Create an account</a>
       </div>
     </div>
   </div>
