--- a/src/app/modules/dashboard/components/transaction-form/transaction-form.component.html
+++ b/src/app/modules/dashboard/components/transaction-form/transaction-form.component.html
@@ -1,4 +1,4 @@
-<form novalidate [formGroup]="transactionForm" autocomplete="off" class="high">
+<form novalidate [formGroup]="transactionForm" autocomplete="off" >
   <div class="centered transaction-add"
        appClickOutside
        (clickOutside)="onClickOutside($event)"
@@ -37,8 +37,6 @@
             <label for="radio-1 + {{option.id}}" class="radio-label">{{ option.type }}</label>
           </div>
         </div>
-
-
         <div class="transaction-types"
              fxLayout
              fxLayout.xs="row"
