--- a/src/styles.scss
+++ b/src/styles.scss
@@ -403,6 +403,14 @@ li {
   position: absolute;
   top:  0;
 }
+.absolute-left {
+  position: absolute;
+  left:  0;
+}
+.absolute-right {
+  position: absolute;
+  right:  0;
+}
 
 .height-transition {
   -webkit-transition: height 500ms ease-out 1s;
@@ -597,6 +605,10 @@ body.app-modal-open {
 .hoverable:hover {
   background: $grey;
   color: $primary;
+}
+
+.inline {
+  display: flex;
 }
 
 
@@ -1134,3 +1146,16 @@ body.app-modal-open {
 .flag.flag-48.flag-vi { background-position: -672px -672px; }
 .flag.flag-48.flag-vn { background-position: -720px -672px; }
 .flag.flag-48.flag-vu { background-position: -768px -672px; }
+
+.mat-dialog-container {
+  display: block;
+  padding: 24px;
+  border-radius: 20px !important;
+  box-sizing: border-box;
+  overflow: auto;
+  outline: 0;
+  width: 100%;
+  height: 100%;
+  min-height: inherit;
+  max-height: inherit;
+}
