--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -73,7 +73,7 @@
 
       <div fxFlex="1 1 20%" *ngIf="showSide">
         <div class="bg-white full-height margin-r">
-          <app-budgets></app-budgets>
+          <!--<app-budgets></app-budgets>-->
         </div>
       </div>
       <div fxFlex="1 1 80%" *ngIf="showSide">
