Remove animationFrame for better performance

--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -97,7 +97,7 @@
             <app-piechart [chart]="pieChart"></app-piechart>
           </div>
           <div fxFlex>
-            <app-linechart [chart]="lineChart"></app-linechart>
+            <app-linechart [chart]="lineChart" [fill]="true"></app-linechart>
           </div>
         </div>
 
@@ -130,10 +130,10 @@
              fxLayoutGap="16px"
              fxLayoutGap.xs="0">
           <div fxFlex class="bg-white">
-            <app-piechart [chart]="pieChart"></app-piechart>
+            <!--<app-piechart [chart]="pieChart"></app-piechart>-->
           </div>
           <div fxFlex>
-            <app-linechart [chart]="lineChart"></app-linechart>
+            <!--<app-linechart [chart]="lineChart"></app-linechart>-->
           </div>
         </div>
 
