Optimize piechart, budget component

--- a/src/app/modules/charts/components/piechart/piechart.component.html
+++ b/src/app/modules/charts/components/piechart/piechart.component.html
@@ -1,6 +1,6 @@
-<div class="padding-s margin-s " [ngStyle]="{'background-color': chart.backgroundColor,'width.px': chart.width + 200}">
+<div class="padding-s margin-s " [ngStyle]="{'background-color': chart.backgroundColor}">
   <div class="padding-s margin-bs">
-    <p class="centered bold padding">{{chart.title}}</p>
+    <p class="centered bold padding">Some Title</p>
     <p class="centered info color-grey">{{chart.subtitle }}</p>
   </div>
 
