--- a/src/app/modules/charts/components/piechart/piechart.component.html
+++ b/src/app/modules/charts/components/piechart/piechart.component.html
@@ -13,9 +13,9 @@
         <div class="key-tag margin-r">
           <div class="padding centered color"
                [ngStyle]="{
-        'background-color': pie.color,
-        'color': invertColor(pie.color, true)
-       }" (click)="toggleTag(pie.title)">
+               'background-color': pie.color,
+               'color': invertColor(pie.color, true)}"
+               (click)="toggleTag(pie.title)">
             <span>  {{ pie.title }}</span>
 
           </div>
